[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
arboard = "3.2.0"
rpassword = "7.2.0"
rusqlite = { version = "0.30.0", features = ["bundled-sqlcipher"]}
dirs = "4.0.0"